# Cproject

./: .gitignore  .gitnore  CMakeLists.txt  README.md  VendingMachine.md  data.h  forlderList.md  install.bat  main.c  정리.pptx
c/: CMakeLists.txt
c++/: CMakeLists.txt  ReadMe.md
c++/serialportmon/: SerialPortMon.sln
c++/src/: main.cpp
c/src/: main.c  screenout.c  screenout.h
csharp/: CMakeLists.txt  README.md
docker/: dockerfile
docker/redmine/: docker-compose.yml
list/: folderList.md
python/: .gitignore  FMTSView.py  ICD.py  MainView.py  NetManager.py  Readme.md  View.py  WWidget.py  lotto.py  main.py  main.spec  resources.py  setting.ini  test.env
python/문서 양식 정리/: main.py
result/: current_time.txt
script/: install.bat
script/result/: current_timea.txt
script/scriptFiles/: ToDoUpdate.sh  projectSetting.sh  test.bat
scriptFiles/: folderSetting.sh
sh/: ToDoUpdate.sh
src/: common.h  function.c  function.h.h  main.c  screenout.c  screenout.h
test/: main.py
testFolder/: README.md
